compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/snake_eater__pass_corpus@002_fn_no_args.gw.snap
---
source: crates/arsenal_parse/tests/snake_eater.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `empty` @1:4..1:9
    ParamList @1:9..1:12
      LParen `(` @1:9..1:10
      RParen `)` @1:10..1:11
    RetType @1:12..1:18
      Arrow `->` @1:12..1:14
      PathType @1:15..1:18
        Ident `u0` @1:15..1:17
    Block @1:18..2:1
      LBrace `{` @1:18..1:19
      RBrace `}` @1:19..1:20
